[package]
edition = "2024"
name = "sh8601-rs"
version = "0.1.7"
description = "A Rust driver for the SH8601 display controller"
license = "MIT OR Apache-2.0"
repository = "https://github.com/theembeddedrustacean/sh8601-rs"
keywords = ["embedded", "display", "sh8601", "esp32", "no_std"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://blog.theembeddedrustacean.com/"
exclude = ["target/debug/*", "assets/*"]

[lib]
name = "sh8601_rs"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
document-features = "0.2.12"
# Optional dependencies for Waveshare 1.8" AMOLED display
critical-section = { version = "1.2.0", optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-backtrace = { version = "0.18.1", optional = true, features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-hal = { version = "=1.0.0", optional = true, features = [
  "esp32s3",
  "psram",
  "unstable",
] }
esp-println = { version = "0.16.1", optional = true, features = [
  "esp32s3",
], default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", optional = true, features = [
  "esp32s3",
] }


[features]
## Enable support for the Waveshare 1.8" AMOLED display
waveshare_18_amoled = [
  "dep:esp-alloc",
  "dep:esp-backtrace",
  "dep:esp-hal",
  "dep:esp-println",
  "dep:critical-section",
  "dep:esp-bootloader-esp-idf",
  "esp-println/auto",
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
